--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     --cor-de-fundo: #ebecee;
     --cor-branco-primario: #ffffff;
     --cor-laranja: #EB9B00;
+    --cor-azul: #002F52;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-primaria: "Poppins";
 
