--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -5,7 +5,7 @@
 
 .carrossel__titulo {
     text-transform: uppercase;
-    padding: 1em 0 0.5em 0;
+    padding: 1em 0.5em;
     color: var(--cor-laranja);
     background-color: var(--cor-branco-primario);
     font-size: 1.125rem;
@@ -49,12 +49,14 @@
 .descricao__titulo__livro {
     color: var(--cor-azul);
     font-weight: 700;
-    margin: 1em 0;
+    font-size: 1.125rem;
+    margin: 0.5em 0.5em 0.5em 0;
 
 }
 
 .descricao__texto {
     color: var(--cor-azul);
+    margin: 0.5em 0.5em 0.5em 0;
 
 }
 
@@ -78,11 +80,19 @@
 }
 
 .botoes__ancora {
-    padding: 1em 2.2em;
+    padding: 1em 1.8em;
     background-color: var(--cor-laranja);
     color: var(--cor-branco-primario);
     font-size: 1rem;
     font-weight: 700;
     text-decoration: none;
     text-align: center;
+}
+
+.botoes__item {
+    margin: 0em 0.5em 0 0;
+}
+
+.descricao__estrelas {
+    margin: 1em 0;
 }
