erro na media query

--- a/styles/header.css
+++ b/styles/header.css
@@ -25,6 +25,10 @@
     padding: 1em;
 }
 
+.container__titulo {
+    display: none;
+}
+
 .lista__menu {
     background-color: var(--cor-branco-primario);
     display: none;
@@ -61,4 +65,23 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
     text-transform: uppercase;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .container__titulo,
+    .container__titulo--negrito {
+        font-family: var(--fonte-secundaria);
+        font-size: 1.875rem;
+    }
+
+    .container__titulo {
+        font-weight: 400;
+    }
+
+    .container__titulo--negrito {
+        font-weight: 700;
+        font-family: var(--fonte-secundaria);
+
+    }
 }
