--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     --cor-azul: #002F52;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-primaria: "Poppins";
+    --fonte-secundaria: "Josefin Sans";
 
 }
 
