tentativa para deixar responsivo

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -37,3 +37,18 @@
     background: url("../assets/Pesquisa.svg") no-repeat;
     background-position: 1em;
 }
+
+@media screen and(min-width: 1000px) {
+    .banner__titulo {
+        font-size: 2.25rem;
+        font-weight: 700;
+    }
+
+    .banner {
+        padding: 5em 4em;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+}
