--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
     --cor-branco-primario: #ffffff;
     --cor-laranja: #EB9B00;
     --cor-azul: #002F52;
+    --cor-preto: #000000;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-primaria: "Poppins";
     --fonte-secundaria: "Josefin Sans";
