--- a/styles/banner.css
+++ b/styles/banner.css
@@ -35,13 +35,19 @@
     font-weight: 400;
     text-align: center;
     background: url("../assets/Pesquisa.svg") no-repeat;
-    background-position: 1em;
+    background-position: 0.5em;
 }
 
-@media screen and(min-width: 1000px) {
+@media screen and (min-width: 1024px) {
     .banner__titulo {
         font-size: 2.25rem;
         font-weight: 700;
+    }
+
+    .banner__texto {
+        margin: 2em 0.5em;
+        font-size: 1.5rem;
+        font-weight: 500;
     }
 
     .banner {
@@ -50,5 +56,10 @@
 
     .banner__pesquisa {
         width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        font-size: 1.165rem;
+        background-position: 5.5em;
     }
 }
