--- a/styles/contato.css
+++ b/styles/contato.css
@@ -35,11 +35,32 @@
     font-family: var(--fonte-primaria);
 }
 
-hr {
-    margin: 0;
-}
 
-.rodape {
-    background-color: var(--cor-branco-primario);
-    padding: 1em
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 3em;
+    }
+
+    .contato__email {
+        width: 40%;
+    }
+
+    .contato__descrição {
+        margin-right: 1.4em;
+        width: 40%;
+    }
+
+    .contato__titulo {
+        font-size: 1.5rem;
+        font-weight: 700;
+    }
+
+    .contato__email::placeholder {
+        padding-left: 3em;
+    }
+
 }
