--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -46,3 +46,15 @@ hr {
         font-size: 1.5rem;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .rodape {
+        padding: 3em 0;
+    }
+
+    .rodape__lista {
+        border-left: solid 1px var(--cor-cinza-claro);
+        padding-left: 1em;
+    }
+
+}
