--- a/styles/banner.css
+++ b/styles/banner.css
@@ -63,3 +63,18 @@
         background-position: 5.5em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 38%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 6em;
+    }
+
+    .banner {
+        padding: 6em 0;
+    }
+
+}
