--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -43,6 +43,11 @@
         display: none;
     }
 
+    .topicos {
+        padding: 2em 10vw;
+
+    }
+
     .topicos__titulo {
         font-size: 1.5rem;
         margin-top: 1em;
@@ -55,7 +60,27 @@
     }
 
     .topicos__item {
-        margin: 2.5em 4em;
+        margin: 1em;
         padding: 2em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .topicos {
+        padding: 3em 25vw;
+
+    }
+
+    .topicos__item {
+        margin: 1em;
+        padding: 2em;
+    }
+
+    .topicos__titulo {
+        font-size: 2rem;
+    }
+
+    .topicos__item a {
+        font-size: 1.5rem;
     }
 }
